--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular6-login",
-  "version": "0.0.0",
+  "name": "music-cloud",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
