--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=8082
 #database
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
 
 #uploading
 spring.servlet.multipart.max-file-size=20mb
