--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.servlet.multipart.max-file-size=20mb
 spring.servlet.multipart.max-request-size=20mb
 
 #profile
-spring.profiles.active=dev
+spring.profiles.active=prod
