--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,6 @@
 
 ### Test data ###
 rcsData/generator/estimateMatrix.csv
+client/src/assets/audio-storage/
+client/src/assets/photo-storage/
 *.csv
