--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,5 @@
 
 ### Test data ###
 rcsData/generator/estimateMatrix.csv
-client/src/assets/audio-storage/
-client/src/assets/photo-storage/
-*.csv
+client/src/assets/audio-storage/*
+client/src/assets/photo-storage/*
