remake file uploading and getting

--- a/music-cloud-server/src/main/resources/application.properties
+++ b/music-cloud-server/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.servlet.multipart.max-request-size=20mb
 
 #profile
 spring.profiles.active=prod
+
+spring.resources.static-locations=file:/var/www/static,classpath:static
