--- a/music-cloud-server/pom.xml
+++ b/music-cloud-server/pom.xml
@@ -70,6 +70,16 @@
             <version>1.2.17</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.0-beta1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.0-beta1</version>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.34</version>
@@ -97,8 +107,7 @@
                             <outputDirectory>${project.build.directory}/classes/resources/</outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>${project.parent.basedir}/music-cloud-web/src/main/web/dist/np-app/
-                                    </directory>
+                                    <directory>${project.parent.basedir}/music-cloud-web/src/main/web/dist/np-app/</directory>
                                 </resource>
                             </resources>
                         </configuration>
