--- a/music-cloud-web/pom.xml
+++ b/music-cloud-web/pom.xml
@@ -49,7 +49,7 @@
 						</goals>
 
 						<configuration>
-							<arguments>run build</arguments>
+							<arguments>run build-prod</arguments>
 						</configuration>
 					</execution>
 					<execution>
