--- a/music-cloud-server/src/main/resources/application-dev.properties
+++ b/music-cloud-server/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 #database properties
-spring.datasource.url=jdbc:h2:~/.music-cloud/db/mcData;DB_CLOSE_ON_EXIT=FALSE;IFEXISTS=FALSE;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE;
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=kulyginvv
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/mc?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
