--- a/music-cloud-server/src/main/resources/application.properties
+++ b/music-cloud-server/src/main/resources/application.properties
@@ -11,4 +11,8 @@ spring.servlet.multipart.max-file-size=20mb
 spring.servlet.multipart.max-request-size=20mb
 
 #profile
-spring.profiles.active=prod
+spring.profiles.active=dev
+
+#storage
+storage.user=a-mcloud
+storage.token=AQAAAAAzsNgJAAWfAVtayq1fmUFciIhgz56GU3k
