--- a/music-cloud-web/pom.xml
+++ b/music-cloud-web/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.kulygin.musiccloud</groupId>
 		<artifactId>music-cloud-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.2.55 beta 2</version>
 	</parent>
 	<artifactId>music-cloud-web</artifactId>
 	<name>music-cloud-web</name>
