--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.kulygin.musiccloud</groupId>
     <artifactId>music-cloud-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.2.55 beta 2</version>
     <packaging>pom</packaging>
     <parent>
         <groupId>org.springframework.boot</groupId>
