--- a/music-cloud-server/pom.xml
+++ b/music-cloud-server/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.kulygin.musiccloud</groupId>
         <artifactId>music-cloud-parent</artifactId>
-        <version>0.2.55 beta 2</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>music-cloud-server</artifactId>
     <packaging>war</packaging>
